--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -6,9 +6,9 @@
 				<div class="small m-0 text-white">Copyright &copy; Your Website 2022</div>
 			</div>
 			<div class="col-auto">
-				<a class="link-light small" href="#!">Vie privée</a>
+				<a class="link-light small" href="{{ path('app_private')}}">Vie privée</a>
 				<span class="text-white mx-1">&middot;</span>
-				<a class="link-light small" href="#!">Contact</a>
+				<a class="link-light small" href="{{ path('app_contact')}}">Contact</a>
 			</div>
 		</div>
 	</div>
