--- a/templates/registration/reset_password.html.twig
+++ b/templates/registration/reset_password.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}Nouveau mdp
+{% block hero %}{% endblock %}
+{% block title %}Nouveau mot de passe
 {% endblock %}
 
 {% block body %}
