--- a/templates/security/forgot.html.twig
+++ b/templates/security/forgot.html.twig
@@ -16,12 +16,10 @@
 					<div class="form-content">
 						<input type="email" class="form-control" id="email" name="email" placeholder="email" required>
 					</div>
-					<button type="submit" class="btn btn-secondary my-3 w50">Envoyer</button>
+					<button type="submit" class="btn btn-primary my-3 w50">Envoyer</button>
 
 				</div>
 			</form>
 		</div>
 	</section>
 {% endblock %}
-{% block preview %}{% endblock %}
-{% block footer %}{% endblock %}
