--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -25,6 +25,9 @@
 				</li>
 				{% if app.user %}
 					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_profil')}}">Mon profil</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" href="{{ path('app_logout')}}">Me déconnecter</a>
 					</li>
 					{% else%}
