--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,11 +48,10 @@
 								<div class="my-5 text-center text-xl-start">
 									<h1 class="display-5 fw-bolder text-white mb-2">Le snowboard n'est pas un sport, c'est un art de vivre, voire de l'art tout court !</h1>
 								</div>
-								<div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-									<a class="btn btn-outline-light btn-lg px-4" href="#figures">Les figures</a>
-								</div>
+								<div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-end"></div>
 							</div>
 							<div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="assets/img/header2.jpg" alt="..."/></div>
+							<a class="text-end" href="#figures"><img src="assets/icone/fleche.png"></a>
 						</div>
 					</div>
 				</header>
