--- a/templates/figure/add_figure.html.twig
+++ b/templates/figure/add_figure.html.twig
@@ -43,7 +43,7 @@
 				{{ form_row(form.title) }}
 			</div>
 			{{ form_row(form.description) }}
-			<div class="col-3">
+			<div class="col-sm-4 col-md-3 ">
 				{{ form_row(form.category) }}
 			</div>
 			{{ form_row(form.video) }}
@@ -53,7 +53,7 @@
 				{{ form_row(form.media) }}
 			{% endif %}
 			<br>
-			<button type="submit" class="btn btn-primary">
+			<button type="submit" class="btn btn-primary mb-2">
 				{% if editMode %}
 					Modifier la figure
 				{% else %}
@@ -61,7 +61,7 @@
 				{% endif %}
 			</button>
 
-			<a class="btn btn-secondary" href="{{ path('app_home') }}">Annuler</a>
+			<a class="btn btn-secondary mb-2" href="{{ path('app_home') }}">Annuler</a>
 
 			{{ form_end(form) }}
 		</div>
