--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,7 +51,7 @@
 								<div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-end"></div>
 							</div>
 							<div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="assets/img/header2.jpg" alt="..."/></div>
-							<a class="text-end" href="#figures"><img src="assets/icone/fleche.png"></a>
+							<a class="text-end mb-2" href="#figures"><img src="assets/icone/fleche.png"></a>
 						</div>
 					</div>
 				</header>
