--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -3,7 +3,9 @@
 	<div class="container px-5">
 		<div class="row align-items-center justify-content-between flex-column flex-sm-row">
 			<div class="col-auto">
-				<div class="small m-0 text-white">Copyright &copy; Your Website 2022</div>
+				<div class="small m-0 text-white">Copyright &copy; Projet6 Snowtricks
+					<span class="couleur">OPENCLASSROOMS</span>
+				</div>
 			</div>
 			<div class="col-auto">
 				<a class="link-light small" href="{{ path('app_private')}}">Vie privée</a>
