--- a/templates/registration/reset_password.html.twig
+++ b/templates/registration/reset_password.html.twig
@@ -4,14 +4,16 @@
 {% endblock %}
 
 {% block body %}
-	<div class="forgot-form">
-		{{ form_start(form) }}
-		<div class="block-form">
-			<div class="form-content">
-				{{ form_row(form.password) }}
+	<div class="container">
+		<div class="forgot-form m-4">
+			{{ form_start(form) }}
+			<div class="block-form">
+				<div class="form-content">
+					{{ form_row(form.password) }}
+				</div><br>
+				<button type="submit" class="btn btn-primary">Envoyer</button>
 			</div>
-			<button type="submit" class="btn">Envoyer</button>
+			{{ form_end(form) }}
 		</div>
-		{{ form_end(form) }}
 	</div>
 {% endblock %}
