--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -28,7 +28,7 @@
 						<a class="nav-link" href="{{ path('app_profil')}}">Mon profil</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="{{ path('app_logout')}}">Me déconnecter</a>
+						<a class="nav-link" href="{{ path('app_logout')}}" onclick="return confirm('Vous allez être déconnecté')">Me déconnecter</a>
 					</li>
 					{% else%}
 					<li class="nav-item dropdown">
